Check answer button on last question on mobile fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -123,7 +123,7 @@ ul {
   cursor: pointer;
 }
 
-a.skip-button {
+a.skip-button:not(.main-skip-button) {
   color: #007bff !important;
   display: inline !important;
 }
@@ -181,19 +181,19 @@ a.skip-button:hover {
 }
 
 @media (max-width: 473px) {
-  #main-skip-button {
+  .main-skip-button {
     display: none !important;
   }
 }
 
 @media (max-width: 473px) {
-  #main-skip-button {
+  .main-skip-button {
     display: none !important;
   }
 }
 
 @media (max-width: 579px) {
-  #main-skip-button {
+  .main-skip-button {
     display: none !important;
   }
 
